[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "python-via"
version = "0.2.0"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "importlib-metadata; python_version<'3.10'",
]
requires-python = ">=3.8"
authors = [
  {name = "ShihHsuanChen"},
]
maintainers = [
  {name = "ShihHsuanChen"},
]
description = "Local VGG Annotator with Uvicorn server"
# readme = "README.md"
license = {file = "LICENSE"}
# license-files = ["LICEN[CS]E.*"]
classifiers = [
    "Framework :: FastAPI",
    "Programming Language :: Python :: 3",
]

[project.optional-dependencies]

[project.urls]
Homepage = "https://example.com"
Documentation = "https://readthedocs.org"
Repository = "https://github.com/ShihHsuanChen/python-via"
"Bug Tracker" = "https://github.com/ShihHsuanChen/python-via/issues"
Changelog = "https://github.com/ShihHsuanChen/python-via/blob/master/CHANGELOG.md"

[project.scripts]
via = "python_via.__main__:main"

[tool.setuptools.package-data]
"python_via.static" = ["*.html", "*.js", "*.css"]
